<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.ListMeetingActivity"
    android:background="@color/lavender_web"
    android:id="@+id/activity_list_meeting_root"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_list_meeting_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_list_meeting_app_bar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIconTint="@color/white"
            app:menu="@menu/toolbar_menu"
            app:title="Ma Réunion"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_list_meeting_rooms_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:visibility="visible"
            tools:listitem="@layout/meeting_room_itemview"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_list_meeting_hours_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="16"
            tools:visibility="visible"
            tools:listitem="@layout/meeting_hour_filter_item_view"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_list_meeting_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/meeting_items_view"
        app:layout_constraintTop_toBottomOf="@id/activity_list_meeting_app_bar_layout"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_list_meeting_add_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/space_cadet_blue"
        android:contentDescription="@string/fab_content_description"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>