<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/meeting_hour_filter"
        android:icon="@drawable/ic_baseline_access_time_24"
        android:contentDescription="@string/hour_filter"
        app:showAsAction="ifRoom"
        android:title="@string/filtrer_par_heures"
        />
    <item
        android:id="@+id/meeting_menu_room"
        android:icon="@drawable/ic_baseline_room_24"
        android:contentDescription="@string/room_filter"
        app:showAsAction="ifRoom"
        android:title="@string/filtrer_par_salles"
        />
</menu>