...
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@id/meeting_email"
        android:textSize="16sp"
        android:textStyle="bold"
        android:lines="1"
        app:layout_constraintEnd_toStartOf="@id/meetings_item_delete_button"
        app:layout_constraintStart_toEndOf="@id/meeting_avatar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Réunion A - 14h00 - Mario"
        />

    <TextView
...
