...
        android:src="@drawable/ic_baseline_access_time_24_two"
        android:background="@color/lavender_web"
        app:tint="@color/space_cadet_blue"
        app:layout_constraintTop_toBottomOf="@id/create_meeting_hour_tv"
        app:layout_constraintStart_toStartOf="@id/create_meeting_room_til"
        app:layout_constraintEnd_toEndOf="@id/create_meeting_room_til"
        app:layout_constraintBottom_toTopOf="@id/create_meeting_create_button"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_meeting_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
